--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/style.min.css">
+    <title>Shopia</title>
 </head>
 
 <body class="body">
+    <h1 hidden>On-line shop "Shopia"</h1>
     <header class="header">
-        <section class="user-box wrapper">
-            <a href="tel:+001 555 801" class="tel">CAll +001 555 801</a>
+        <section class="user-box">
+            <h2 hidden>Bloq for register user</h2>
+            <a href="tel:+001555801" class="tel">CAll +001 555 801</a>
             <nav class="navigation-user">
                 <ul class="navigation-user__list">
                     <li class="navigation-user__item">
@@ -29,6 +32,7 @@
             </nav>
         </section>
         <section class="site-nav">
+            <h2 hidden>Main navigation</h2>
             <nav class="site-nav__main-nav">
                 <ul class="site-nav__list">
                     <li class="site-nav__item">
@@ -47,6 +51,7 @@
             </nav>
             <div class="logo">Shopia</div>
             <section class="social">
+                <h2 hidden>Box of social links</h2>
                 <nav class="social__nav">
                     <ul class="social__list">
                         <li class="social__item">
@@ -64,13 +69,221 @@
                     </ul>
                 </nav>
             </section>
+            <button class="button">RUPIAH</button>
         </section>
     </header>
     <main class="main">
+        <div class="slider">
 
+        </div>
+        <div class="support">
+            <div class="support__item">
+                <span class="support__name-offer">FREE SHIPPING</span>
+                <small class="support__price-offer">In Order Min $200</small>
+            </div>
+            <div class="support__item">
+                <span class="support__name-offer">30-DAYS RETURNS</span>
+                <small class="support__price-offer">Money Back Guarantee</small>
+            </div>
+            <div class="support__item">
+                <span class="support__name-offer">24/7 SUPPORT</span>
+                <small class="support__price-offer">Lifestyme Support</small>
+            </div>
+        </div>
+        <article class="featured">
+            <h2 hidden>Featured of shop "Shopia"</h2>
+            <div class="featured__column">
+                <a href="#" class="featured__link">shoes</a>
+                <a href="#" class="featured__shop-now">SHOP NOW</a>
+                <a href="#" class="featured__link">jewellery</a>
+            </div>
+            <div class="column">
+                <a href="#" class="featured__link">Paris Hilton</a>
+            </div>
+            <div class="column">
+                <a href="#" class="featured__link">50% off</a>
+                <a href="#" class="featured__link">carpet</a>
+            </div>
+        </article>
+        <section class="recent">
+            <h2 hidden>Cards of products</h2>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+            <div class="recent__item">
+                <button class="recent__add" type="button">+ ADD TO CART</button>
+            </div>
+        </section>
+        <section class="brand">
+            <h2 hidden>Brands partners</h2>
+        </section>
+        <section class="testimonial">
+            <h2 hidden>Our clients</h2>
+            <div class="testimonail__item">
+                <span class="testimonial__text">Sed ut perspiciatis
+                    unde omnis iste natus error sit
+                    voluptatem accusantium doloremque</span>
+                <cite class="testimonial__author">Sandra Dewi</cite>
+                <span class="testimonial__job">FASHION STYLISH</span>
+            </div>
+            <div class="testimonail__item">
+                <span class="testimonial__text">Sed ut perspiciatis
+                    unde omnis iste natus error sit
+                    voluptatem accusantium doloremque</span>
+                <cite class="testimonial__author">Shaheer Sheikh</cite>
+                <span class="testimonial__job">DESIGNER</span>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-
+        <section class="information">
+            <div class="information__column">
+                <h2 class="information__h2">SHOPS</h2>
+                <ul class="information__list">
+                    <li class="information__item">
+                        <a href="#" class="information__link">New In</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Women</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Men</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Shoes</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Bags &amp; Accessories</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Top Brands</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Sales &amp; Special Offers</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Lookbook</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="information__column">
+                <h2 class="information__h2">INFORMATION</h2>
+                <ul class="information__list">
+                    <li class="information__item">
+                        <a href="#" class="information__link">About Us</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Customer Service</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">New Collection</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Best Sellers</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Manufactures</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Privacy policy</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Terms &amp; Conditions</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Blog</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="information__column">
+                <h2 class="information__h2">CUSTOMER SERVICE</h2>
+                <ul class="information__list">
+                    <li class="information__item">
+                        <a href="#" class="information__link">Serach Terms</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Advanced Search</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Orders and Returns</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Contact Us</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">RSS</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Help &amp; FAQ's</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Consultant</a>
+                    </li>
+                    <li class="information__item">
+                        <a href="#" class="information__link">Store Locations</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="social">
+            <div class="social__box">
+                <h2 class="social__h2">STAY CONNECTED</h2>
+                <ul class="social__list">
+                    <li class="social__item">
+                        <a href="#" class="social__link">Facebook</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#" class="social__link">Twitter</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#" class="social__link">Instagram</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#" class="social__link">Pint</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#" class="social__link">RSS</a>
+                    </li>
+                </ul>
+            </div>
+            <form action="script.php" class="form">
+                <label for="mail">SUBSCRIBE in OUR NEWS LETTER</label>
+                <input type="email" id="mail" placeholder="Enter Your Email Address">
+                <button class="button" type="button">SUBSCRIBE</button>
+            </form>
+        </section>
+        <section class="copyright">
+            <h2 hidden>Bloq of copyright</h2>
+            <div class="copyright__box">
+                <span class="copyright__info">© 2015 Shopia Fashion Store Shopify</span>
+                <span class="copyright__info">All Rights Reserved. Ecommerce Software by Shopify.</span>
+                <span class="copyright__info">Designed by MoccaLabs.com</span>
+            </div>
+            <div class="cards">
+                <a href="#" class="cards__link">visa</a>
+                <a href="#" class="cards__link">master card</a>
+                <a href="#" class="cards__link">amercan express</a>
+                <a href="#" class="cards__link">discover</a>
+            </div>
+        </section>
     </footer>
 </body>
 
