--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         </symbol>
         <symbol id="instagram" viewBox="0 0 8 14">
             <g>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 5 25 14">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 250 500 14">
                     <path d="M256 49.47l101.8 1.47c24.562 1.12 37.9 5.224 46.778 8.674a78.052 78.052 0 0 1 28.966 18.845 78.052 78.052 0 0 1 18.845 28.966c3.45 8.877 7.554 22.216 8.674 46.778 1.212 26.565 1.47 34.532 1.47 101.8l-1.47 101.8c-1.12 24.562-5.225 37.9-8.674 46.778a83.427 83.427 0 0 1-47.811 47.811c-8.877 3.45-22.216 7.554-46.778 8.674-26.56 1.212-34.527 1.47-101.8 1.47s-75.237-.257-101.8-1.47c-24.562-1.12-37.9-5.225-46.778-8.674a78.051 78.051 0 0 1-28.966-18.845 78.053 78.053 0 0 1-18.845-28.966c-3.45-8.877-7.554-22.216-8.674-46.778-1.212-26.564-1.47-34.532-1.47-101.8l1.47-101.8c1.12-24.562 5.224-37.9 8.674-46.778a78.052 78.052 0 0 1 18.847-28.967 78.053 78.053 0 0 1 28.966-18.845c8.877-3.45 22.216-7.554 46.778-8.674 26.565-1.212 34.532-1.47 101.8-1.47m0-45.4c-68.418 0-77 .3-103.866 1.516-26.815 1.224-45.127 5.482-61.15 11.7a123.488 123.488 0 0 0-44.62 29.057A123.488 123.488 0 0 0 17.3 90.982c-6.223 16.025-10.48 34.337-11.7 61.152C4.37 179 4.08 187.582 4.08 256L5.6 359.866c1.224 26.815 5.482 45.127 11.7 61.15a123.489 123.489 0 0 0 29.057 44.62 123.486 123.486 0 0 0 44.62 29.057c16.025 6.228 34.337 10.486 61.15 11.7 26.87 1.226 35.45 1.516 103.866 1.516s77-.3 103.866-1.516c26.815-1.224 45.127-5.482 61.15-11.7a128.817 128.817 0 0 0 73.677-73.677c6.228-16.025 10.486-34.337 11.7-61.15 1.226-26.87 1.516-35.45 1.516-103.866l-1.516-103.866c-1.224-26.815-5.482-45.127-11.7-61.15a123.486 123.486 0 0 0-29.057-44.62A123.487 123.487 0 0 0 421.018 17.3c-16.025-6.223-34.337-10.48-61.152-11.7C333 4.37 324.418 4.08 256 4.08zM256 126.635A129.365 129.365 0 1 0 385.365 256 129.365 129.365 0 0 0 256 126.635zm0 213.338A83.973 83.973 0 1 1 339.974 256 83.974 83.974 0 0 1 256 339.973z" fill="#d9bf8f" />
                     <circle cx="390.476" cy="121.524" r="30.23" fill="#d9bf8f" />
                 </svg>
@@ -44,7 +44,7 @@
         <header class="header">
             <section class="user-box">
                 <h2 hidden>Bloq for register user</h2>
-                <a href="tel:+001555801" class="user-box__tel">CAll +001 555 801</a>
+                <a href="tel:+001555801" class="user-box__tel">Call +001 555 801</a>
                 <nav class="navigation-user">
                     <ul class="navigation-user__list">
                         <li class="navigation-user__item">
@@ -117,8 +117,8 @@
                             </li>
                         </ul>
                     </nav>
+                    <button class="button">RUPIAH</button>
                 </section>
-                <button class="button">RUPIAH</button>
             </section>
         </header>
         <main class="main">
