--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,48 @@
         </header>
         <main class="main">
             <div class="slider">
-
+                <div class="slider__slide">
+                    <a href="#" class="slider__link">
+                        <span class="slider__season">MID-SEASON</span>
+                        <b class="slider__sale">SALE</b>
+                        <span class="slider__upto">UP TO</span>
+                        <span class="off">50% OFF</span>
+                    </a>
+                    <a href="#" class="slider__now">SHOP NOW</a>
+                </div>
+                <div class="slider__slide">
+                    <a href="#" class="slider__link">
+                        <span class="slider__season">MID-SEASON</span>
+                        <b class="slider__sale">SALE</b>
+                        <span class="slider__upto">UP TO</span>
+                        <span class="off">50% OFF</span>
+                    </a>
+                    <a href="#" class="slider__now">SHOP NOW</a>
+                </div>
+                <div class="slider__slide">
+                    <a href="#" class="slider__link">
+                        <span class="slider__season">MID-SEASON</span>
+                        <b class="slider__sale">SALE</b>
+                        <span class="slider__upto">UP TO</span>
+                        <span class="off">50% OFF</span>
+                    </a>
+                    <a href="#" class="slider__now">SHOP NOW</a>
+                </div>
+                <div class="slider__slide">
+                    <a href="#" class="slider__link">
+                        <span class="slider__season">MID-SEASON</span>
+                        <b class="slider__sale">SALE</b>
+                        <span class="slider__upto">UP TO</span>
+                        <span class="off">50% OFF</span>
+                    </a>
+                    <a href="#" class="slider__now">SHOP NOW</a>
+                </div>
+                <div class="slider__dots">
+                    <span class="slider__dots-item" onclick="currentSlide(1)"></span>
+                    <span class="slider__dots-item" onclick="currentSlide(2)"></span>
+                    <span class="slider__dots-item" onclick="currentSlide(3)"></span>
+                    <span class="slider__dots-item" onclick="currentSlide(4)"></span>
+                </div>
             </div>
             <div class="support">
                 <div class="support__item">
@@ -336,5 +377,6 @@
         </footer>
     </div>
 </body>
+<script src="js/slider.js"></script>
 
 </html>
