--- a/app/index.html
+++ b/app/index.html
@@ -9,36 +9,6 @@
 </head>
 
 <body class="body">
-    <svg style="display:none">
-        <symbol id="icon-facebook" viewBox="0 0 8 14">
-            <g>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 155.139 155.139">
-                    <path d="M89.584 155.14v-70.76h23.742l3.562-27.585H89.584v-17.61c0-7.984 2.208-13.425 13.67-13.425l14.595-.006V1.08C115.325.752 106.66 0 96.577 0 75.52 0 61.104 12.853 61.104 36.452v20.34H37.3v27.585h23.814v70.76h28.48z" fill="#d9bf8f" /></svg>
-            </g>
-        </symbol>
-        <symbol id="twitter" viewBox="0 0 8 14">
-            <g>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 5 25 14">
-                    <path d="M25.855 5.574c-.94.418-1.953.7-3.016.828a5.28 5.28 0 0 0 2.309-2.906c-1.016.602-2.14 1.04-3.336 1.273a5.24 5.24 0 0 0-3.832-1.656c-2.898 0-5.25 2.352-5.25 5.25a5.24 5.24 0 0 0 .137 1.195c-4.363-.22-8.23-2.312-10.82-5.488a5.23 5.23 0 0 0-.711 2.645 5.24 5.24 0 0 0 2.336 4.367c-.863-.027-1.672-.262-2.38-.656v.066c0 2.543 1.81 4.664 4.21 5.148-.44.12-.902.184-1.383.184a5.14 5.14 0 0 1-.988-.094c.668 2.082 2.605 3.605 4.902 3.645-1.793 1.4-4.06 2.246-6.52 2.246-.426 0-.84-.023-1.25-.07 2.32 1.488 5.082 2.355 8.047 2.355 9.656 0 14.938-8 14.938-14.934 0-.23-.004-.457-.016-.684a10.5 10.5 0 0 0 2.621-2.715" fill="#d9bf8f" />
-                </svg>
-            </g>
-        </symbol>
-        <symbol id="pinterest" viewBox="0 0 8 14">
-            <g>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 5 25 14">
-                    <path d="M12 0C5.373 0 0 5.372 0 12c0 5.084 3.163 9.426 7.627 11.174-.105-.95-.2-2.405.042-3.44l1.407-5.965s-.36-.72-.36-1.782c0-1.668.967-2.914 2.17-2.914 1.023 0 1.518.77 1.518 1.7 0 1.03-.655 2.568-.994 3.995-.283 1.194.6 2.17 1.777 2.17 2.133 0 3.772-2.25 3.772-5.495 0-2.873-2.064-4.882-5.012-4.882-3.414 0-5.418 2.56-5.418 5.207 0 1.03.397 2.138.893 2.738a.36.36 0 0 1 .083.345l-.333 1.36c-.053.22-.174.267-.402.16-1.5-.698-2.436-2.89-2.436-4.65 0-3.785 2.75-7.262 7.93-7.262 4.163 0 7.398 2.967 7.398 6.93 0 4.136-2.607 7.464-6.227 7.464-1.216 0-2.36-.63-2.75-1.378l-.748 2.853c-.27 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0z" fill="#d9bf8f" />
-                </svg>
-            </g>
-        </symbol>
-        <symbol id="instagram" viewBox="0 0 8 14">
-            <g>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 250 500 14">
-                    <path d="M256 49.47l101.8 1.47c24.562 1.12 37.9 5.224 46.778 8.674a78.052 78.052 0 0 1 28.966 18.845 78.052 78.052 0 0 1 18.845 28.966c3.45 8.877 7.554 22.216 8.674 46.778 1.212 26.565 1.47 34.532 1.47 101.8l-1.47 101.8c-1.12 24.562-5.225 37.9-8.674 46.778a83.427 83.427 0 0 1-47.811 47.811c-8.877 3.45-22.216 7.554-46.778 8.674-26.56 1.212-34.527 1.47-101.8 1.47s-75.237-.257-101.8-1.47c-24.562-1.12-37.9-5.225-46.778-8.674a78.051 78.051 0 0 1-28.966-18.845 78.053 78.053 0 0 1-18.845-28.966c-3.45-8.877-7.554-22.216-8.674-46.778-1.212-26.564-1.47-34.532-1.47-101.8l1.47-101.8c1.12-24.562 5.224-37.9 8.674-46.778a78.052 78.052 0 0 1 18.847-28.967 78.053 78.053 0 0 1 28.966-18.845c8.877-3.45 22.216-7.554 46.778-8.674 26.565-1.212 34.532-1.47 101.8-1.47m0-45.4c-68.418 0-77 .3-103.866 1.516-26.815 1.224-45.127 5.482-61.15 11.7a123.488 123.488 0 0 0-44.62 29.057A123.488 123.488 0 0 0 17.3 90.982c-6.223 16.025-10.48 34.337-11.7 61.152C4.37 179 4.08 187.582 4.08 256L5.6 359.866c1.224 26.815 5.482 45.127 11.7 61.15a123.489 123.489 0 0 0 29.057 44.62 123.486 123.486 0 0 0 44.62 29.057c16.025 6.228 34.337 10.486 61.15 11.7 26.87 1.226 35.45 1.516 103.866 1.516s77-.3 103.866-1.516c26.815-1.224 45.127-5.482 61.15-11.7a128.817 128.817 0 0 0 73.677-73.677c6.228-16.025 10.486-34.337 11.7-61.15 1.226-26.87 1.516-35.45 1.516-103.866l-1.516-103.866c-1.224-26.815-5.482-45.127-11.7-61.15a123.486 123.486 0 0 0-29.057-44.62A123.487 123.487 0 0 0 421.018 17.3c-16.025-6.223-34.337-10.48-61.152-11.7C333 4.37 324.418 4.08 256 4.08zM256 126.635A129.365 129.365 0 1 0 385.365 256 129.365 129.365 0 0 0 256 126.635zm0 213.338A83.973 83.973 0 1 1 339.974 256 83.974 83.974 0 0 1 256 339.973z" fill="#d9bf8f" />
-                    <circle cx="390.476" cy="121.524" r="30.23" fill="#d9bf8f" />
-                </svg>
-            </g>
-        </symbol>
-    </svg>
     <div class="wrapper">
         <h1 hidden>On-line shop "Shopia"</h1>
         <header class="header">
@@ -124,39 +94,45 @@
         <main class="main">
             <div class="slider">
                 <div class="slider__slide">
-                    <a href="#" class="slider__link">
+                    <div class="slider__container">
                         <span class="slider__season">MID-SEASON</span>
                         <b class="slider__sale">SALE</b>
                         <span class="slider__upto">UP TO</span>
-                        <span class="off">50% OFF</span>
-                    </a>
+                        <span class="slider__off">50% OFF</span>
+                    </div>
                     <a href="#" class="slider__now">SHOP NOW</a>
                 </div>
                 <div class="slider__slide">
-                    <a href="#" class="slider__link">
-                        <span class="slider__season">MID-SEASON</span>
-                        <b class="slider__sale">SALE</b>
-                        <span class="slider__upto">UP TO</span>
-                        <span class="off">50% OFF</span>
-                    </a>
+                    <div class="slider__box">
+                        <div class="slider__container">
+                            <span class="slider__season">MID-SEASON</span>
+                            <b class="slider__sale">SALE</b>
+                            <span class="slider__upto">UP TO</span>
+                            <span class="slider__off">50% OFF</span>
+                        </div>
+                    </div>
                     <a href="#" class="slider__now">SHOP NOW</a>
                 </div>
                 <div class="slider__slide">
-                    <a href="#" class="slider__link">
-                        <span class="slider__season">MID-SEASON</span>
-                        <b class="slider__sale">SALE</b>
-                        <span class="slider__upto">UP TO</span>
-                        <span class="off">50% OFF</span>
-                    </a>
+                    <div class="slider__box">
+                        <div class="slider__container">
+                            <span class="slider__season">MID-SEASON</span>
+                            <b class="slider__sale">SALE</b>
+                            <span class="slider__upto">UP TO</span>
+                            <span class="slider__off">50% OFF</span>
+                        </div>
+                    </div>
                     <a href="#" class="slider__now">SHOP NOW</a>
                 </div>
                 <div class="slider__slide">
-                    <a href="#" class="slider__link">
-                        <span class="slider__season">MID-SEASON</span>
-                        <b class="slider__sale">SALE</b>
-                        <span class="slider__upto">UP TO</span>
-                        <span class="off">50% OFF</span>
-                    </a>
+                    <div class="slider__box">
+                        <div class="slider__container">
+                            <span class="slider__season">MID-SEASON</span>
+                            <b class="slider__sale">SALE</b>
+                            <span class="slider__upto">UP TO</span>
+                            <span class="slider__off">50% OFF</span>
+                        </div>
+                    </div>
                     <a href="#" class="slider__now">SHOP NOW</a>
                 </div>
                 <div class="slider__dots">
@@ -167,15 +143,15 @@
                 </div>
             </div>
             <div class="support">
-                <div class="support__item">
+                <div class="support__item support__item_gold-left">
                     <span class="support__name-offer">FREE SHIPPING</span>
                     <small class="support__price-offer">In Order Min $200</small>
                 </div>
-                <div class="support__item">
+                <div class="support__item support__item_black">
                     <span class="support__name-offer">30-DAYS RETURNS</span>
                     <small class="support__price-offer">Money Back Guarantee</small>
                 </div>
-                <div class="support__item">
+                <div class="support__item support__item_gold">
                     <span class="support__name-offer">24/7 SUPPORT</span>
                     <small class="support__price-offer">Lifestyme Support</small>
                 </div>
