Svg sprite view

--- a/app/index.html
+++ b/app/index.html
@@ -60,28 +60,28 @@
                             <li class="social__item">
                                 <a href="#" class="social__link">
                                     <svg width="34" height="34">
-                                        <use xlink:href="#icon-facebook"></use>
+                                        <use xlink:href="img/sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
                                     <svg width="34" height="34">
-                                        <use xlink:href="#twitter"></use>
+                                        <use xlink:href="img/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
                                     <svg width="34" height="34">
-                                        <use xlink:href="#pinterest"></use>
+                                        <use xlink:href="img/sprite.svg#pinterest"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social__item">
                                 <a href="#" class="social__link">
                                     <svg width="34" height="34">
-                                        <use xlink:href="#instagram"></use>
+                                        <use xlink:href="img/sprite.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
